use protocol-relative URL for google web fonts

--- a/style/main.scss
+++ b/style/main.scss
@@ -1,8 +1,8 @@
 ---
 ---
-@import url(http://fonts.googleapis.com/css?family=Cinzel:400,700);
-@import url(http://fonts.googleapis.com/css?family=Droid+Sans:400,700);
-@import url(http://fonts.googleapis.com/css?family=Inconsolata:400,700);
+@import url(//fonts.googleapis.com/css?family=Cinzel:400,700);
+@import url(//fonts.googleapis.com/css?family=Droid+Sans:400,700);
+@import url(//fonts.googleapis.com/css?family=Inconsolata:400,700);
 
 /* copyright 2015 by mike lodato (zvxryb@gmail.com)
    all rights reserved */
