--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -19,6 +19,9 @@
 				}
 			});
 		</script>
+		<script type='text/javascript'
+			src='https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML'>
+		</script>
 	</head>
 	<body>
 		<div id='ml-header'>
