--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -19,6 +19,8 @@
 				}
 			});
 		</script>
+		<script src='/lib/rainbow.min.js'></script>
+		<script src='/lib/language/glsl.js'></script>
 		<script type='text/javascript'
 			src='https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML'>
 		</script>
