--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,6 +7,7 @@
 	<head>
 		<meta charset='UTF-8'>
 		<title>{{ site.data.info.name }}{% if page.section %}'s {{ page.section }}{% endif %}{% if page.title %} - {{ page.title }}{% endif %}</title>
+		<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'></link>
 		<link rel='stylesheet' href='/style/main.css'></link>
 		<script src='/lib/require.js'></script>
 		<script>
@@ -34,9 +35,22 @@
 				{% endif %}
 			</a>
 			<div id='ml-nav'>
-				<a class='ml-item' href='/blog/'><h2>Blog</h2></a>
-				<a class='ml-item' href='/resume/'><h2>Resume</h2></a>
-				<a class='ml-item' href='/arcade/'><h2>Arcade</h2></a>
+				<a class='ml-item' href='/blog/'  ><h2>
+					<i class='ml-icon fa fa-pencil'></i>
+					<span class='ml-text'>Blog</span>
+				</h2></a>
+				<a class='ml-item' href='/resume/'><h2>
+					<i class='ml-icon fa fa-briefcase'></i>
+					<span class='ml-text'>Resume</span>
+				</h2></a>
+				<a class='ml-item' href='/arcade/'><h2>
+					<i class='ml-icon fa fa-gamepad'></i>
+					<span class='ml-text'>Arcade</span>
+				</h2></a>
+				<a class='ml-item' href='https://github.com/zvxryb'><h2>
+					<i class='ml-icon fa fa-github-alt'></i>
+					<span class='ml-text'>Github</span>
+				</h2></a>
 			</div>
 		</div>
 		<div>
