--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,10 @@ layout: page
 ---
 <div class='ml-post'>
 	<div class='ml-header'>
-		<h1>{{ page.title }}</h1>
+		<div class='ml-title'>
+			<h1>{{ page.title }}</h1>
+			<h2>{{ page.subtitle }}</h2>
+		</div>
 		<span class='ml-date'>{{ page.date | date: "%Y %b %-d, %a" }}</span>
 	</div>
 	<div class='ml-content'>
