add "about" to side bar in landscape mode

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -71,6 +71,10 @@
 					<span class='ml-text'>Github</span>
 				</h2></a>
 			</div>
+			<div id='ml-about'>
+				{% capture about %}{% include about.md %}{% endcapture %}
+				{{ about | markdownify }}
+			</div>
 		</div>
 		<div>
 			<div id='ml-content'>
