fix mathjax configuration

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -22,10 +22,7 @@
 		</script>
 		<script src='/lib/rainbow.min.js'></script>
 		<script src='/lib/language/glsl.js'></script>
-		<script type='text/javascript'
-			src='https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML'>
-		</script>
-		<script>
+		<script type='text/x-mathjax-config'>
 			MathJax.Hub.Config({
 				TeX: {
 					Macros: {
@@ -43,6 +40,9 @@
 					}
 				}
 			});
+		</script>
+		<script type='text/javascript'
+			src='https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML'>
 		</script>
 	</head>
 	<body>
