--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -11,9 +11,12 @@
 		</div>
 		<div class='ml-content'>
 			{{ entry.excerpt | markdownify }}
+			<div class='ml-fade-down'></div>
 		</div>
 		<div class='ml-footer'>
-			<a href='{{ entry.url }}'>Continue</a>
+			<a href='{{ entry.url }}'>
+				<b>Continue Reading</b> <i class='fa fa-chevron-right'></i>
+			</a>
 		</div>
 	</div>
 {% endfor %}
