--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,6 +10,7 @@ cdnjs_libs: https://cdnjs.cloudflare.com/ajax/libs
 		<title>{{ site.data.info.name }}{% if page.section %}'s {{ page.section }}{% endif %}{% if page.title %} - {{ page.title }}{% endif %}</title>
 		<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'></link>
 		<link rel='stylesheet' href='/style/main.css'></link>
+		<script src='{{ page.cdnjs_libs }}/es5-shim/4.1.14/es5-shim.min.js'></script>
 		<script src='{{ page.cdnjs_libs }}/es6-shim/0.33.6/es6-shim.min.js'></script>
 		<script src='/lib/require.js'></script>
 		<script>
