--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -13,7 +13,7 @@
 			{{ entry.excerpt | markdownify }}
 			<div class='ml-fade-down'></div>
 		</div>
-		<div class='ml-footer'>
+		<div class='ml-footer ml-right'>
 			<a href='{{ entry.url }}'>
 				<b>Continue Reading</b> <i class='fa fa-chevron-right'></i>
 			</a>
